--- a/GestionClient/GestionClient/MainWindow.xaml
+++ b/GestionClient/GestionClient/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GestionClient"
         mc:Ignorable="d"
-        Title="MainWindow" Height="350" Width="525">
+        Title="MainWindow">
     <Grid>
-        
+
+        <ListView Name="lstCabinet" HorizontalAlignment="Stretch">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Header="Raison Sociale" DisplayMemberBinding="{Binding RaisonSociale}"/>
+                    <GridViewColumn Header="Praticiens"  />
+                    <GridViewColumn Header="Adresse" />
+                </GridView>
+            </ListView.View>
+        </ListView>
+
     </Grid>
 </Window>
