--- a/GestionClient/GestionClient/View/Acceuil.xaml
+++ b/GestionClient/GestionClient/View/Acceuil.xaml
@@ -2,20 +2,38 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"             
         xmlns:local="clr-namespace:GestionClient"        
+        xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         mc:Ignorable="d">
-    <Grid>
+    <Grid Grid.Column="2">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200*" />
+            <ColumnDefinition Width="100*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition />
+        </Grid.RowDefinitions>
 
-        <ListView Name="lstCabinet" HorizontalAlignment="Stretch" ItemsSource="{Binding CabinetList}">
+        <ListView Name="lstCabinet" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" ItemsSource="{Binding CabinetList}" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Raison Sociale" DisplayMemberBinding="{Binding RaisonSociale}"/>
                     <GridViewColumn Header="Praticiens"  />
                     <GridViewColumn Header="Adresse" />
                 </GridView>
-            </ListView.View>
+            </ListView.View>          
+            <i:Interaction.Triggers>
+                <i:EventTrigger EventName="SelectionChanged">
+                    <i:InvokeCommandAction Command="{Binding SelectedItemChangedCommand}"  
+                                           CommandParameter="{Binding ElementName=lstCabinet, Path=SelectedItem}"/>
+                </i:EventTrigger>
+            </i:Interaction.Triggers>
         </ListView>
+
+        <Button Grid.Column="2" Grid.Row="2" Command="{Binding Path=AddCabinet}" CommandParameter="{Binding }" />
+
 
     </Grid>
 </UserControl>
