--- a/GestionClient/GestionClient/View/Main.xaml
+++ b/GestionClient/GestionClient/View/Main.xaml
@@ -21,7 +21,7 @@
             <local:DetailAssistant />
         </DataTemplate>
         <DataTemplate DataType="{x:Type viewModel:AddPraticienViewModel}">
-            <local:DetailAssistant />
+            <local:DetailPraticien />
         </DataTemplate>
     </Window.Resources>
     <ContentControl Content="{Binding CurrentPageViewModel}" />
