--- a/GestionClient/GestionClient/View/Collaborateur/DetailPraticien.xaml
+++ b/GestionClient/GestionClient/View/Collaborateur/DetailPraticien.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GestionClient.DetailAssistant"
+﻿<UserControl x:Class="GestionClient.DetailPraticien"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -51,63 +51,64 @@
                VerticalAlignment="Center" Margin="0,0,10,0" />
             <ComboBox x:Name="cbTypeCollaborateur" Grid.Column="1" 
                        ItemsSource="{Binding Source={StaticResource dataFromEnum}}" Margin="10,0,0,0" Grid.Row="2" Width="180"  
-                      VerticalAlignment="Center" HorizontalAlignment="Left" SelectedValue="{Binding Assistant.Titre}" />
+                      VerticalAlignment="Center" HorizontalAlignment="Left" SelectedValue="{Binding Praticien.Titre}" />
 
             <!--row 3 -->
-            <!--<Label x:Name="lblDateConnaissance" Grid.Row="3" Content="Date de connaissance" HorizontalAlignment="Right" 
+            <Label x:Name="lblDateConnaissance" Grid.Row="3" Content="Date de connaissance" HorizontalAlignment="Right" 
                VerticalAlignment="Center" Margin="0,0,10,0" />
             <DatePicker Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="3" VerticalAlignment="Center"
                          Width="180" Language="fr-FR" FirstDayOfWeek="Monday"
-                        SelectedDate="{Binding Assistant.DateConnaissance}"/>-->
+                        SelectedDate="{Binding Praticien.DateConnaissance}"/>
 
             <!--row 4 -->
             <Label x:Name="lblNom" Grid.Row="4" Content="Nom" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtNom" Grid.Row="4" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Nom, Mode=TwoWay}" />
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Praticien.Nom, Mode=TwoWay}" />
 
             <!--row 5 -->
             <Label x:Name="lblPrenom" Grid.Row="5" Content="Prenom" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtPrenom" Grid.Row="5" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Prenom, Mode=TwoWay}" />
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Praticien.Prenom, Mode=TwoWay}" />
 
             <!--row 6 -->
             <Label x:Name="lblAdresse" Grid.Row="6" Content="Adresse" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtAdresse" Grid.Row="6" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Adresse, Mode=TwoWay}" />
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Praticien.Adresse, Mode=TwoWay}" />
 
             <!--row 7 -->
             <Label x:Name="lblCodePostal" Grid.Row="7" Content="Code postal" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtCodePostal" Grid.Row="7" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.CodePostal, Mode=TwoWay}" />
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Praticien.CodePostal, Mode=TwoWay}" />
 
             <!--row 8 -->
             <Label x:Name="lblVille" Grid.Row="8" Content="Ville" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtVille" Grid.Row="8" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Ville, Mode=TwoWay}" />
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Praticien.Ville, Mode=TwoWay}" />
 
             <!--row 9 -->
             <Label x:Name="lblTelephone" Grid.Row="9" Content="Telephone" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtTelephone" Grid.Row="9" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Telephone, Mode=TwoWay}" />
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Praticien.Telephone, Mode=TwoWay}" />
 
             <!--row 10 -->
-            <!--<Label x:Name="lblEmail" Grid.Row="10" Content="Email" HorizontalAlignment="Right" Margin="0,0,10,0" 
+            <Label x:Name="lblEmail" Grid.Row="10" Content="Email" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtEmail" Grid.Row="10" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Email, Mode=TwoWay}" />
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Praticien.Email, Mode=TwoWay}" />
 
-            --><!--row 11--><!--
+            <!--row 11-->
+            
             <Label x:Name="lblCommentaire" Grid.Row="11" Content="Commentaire" HorizontalAlignment="Right" Margin="10,0,0,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtCommentaire" Grid.Row="11" Grid.Column="2" AcceptsReturn="True" HorizontalAlignment="Left" Height="50" 
                      Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Stretch" Width="180" 
-                     Text="{Binding Assistant.Commentaire, Mode=TwoWay}" />-->
+                     Text="{Binding Praticien.Commentaire, Mode=TwoWay}" />
 
             <Grid Grid.Row="12" Grid.Column="1">
                 <Grid.ColumnDefinitions>
@@ -116,7 +117,7 @@
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
                 <Button x:Name="btnValider" Content="Valider" HorizontalAlignment="Left" Margin="10,0,10,0" VerticalAlignment="Center" 
-                        Width="75" Grid.Column="1" Command="{Binding Path=SaveAssistantCommand}"/>
+                        Width="75" Grid.Column="1" Command="{Binding Path=SavePraticienCommand}"/>
                 <Button x:Name="btnAnnuler" Content="Annuler" HorizontalAlignment="Left" Grid.Column="2" Margin="10,0,10,0" 
                         VerticalAlignment="Center" Width="75" Command="{Binding Path=CancelCommand}"/>
             </Grid>
