--- a/GestionClient/GestionClient/View/Acceuil.xaml
+++ b/GestionClient/GestionClient/View/Acceuil.xaml
@@ -5,25 +5,48 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"             
         xmlns:local="clr-namespace:GestionClient"        
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d">
-    <Grid Grid.Column="2">
+    <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="200*" />
-            <ColumnDefinition Width="100*" />
+            <ColumnDefinition  />
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <ListView Name="lstCabinet" Grid.ColumnSpan="2" HorizontalAlignment="Stretch" ItemsSource="{Binding CabinetList}" >
+        <materialDesign:Card HorizontalAlignment="Stretch" VerticalAlignment="Top" Margin="16">
+            <Grid HorizontalAlignment="Stretch" VerticalAlignment="Top"  Margin="8">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="2*" />
+                    <ColumnDefinition Width="1*" />
+                    <ColumnDefinition Width="2*" />
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+                <materialDesign:PackIcon Grid.Column="0" Kind="Comment" Foreground="{Binding ElementName=CommentTextBox, Path=BorderBrush}" />
+                <TextBox Grid.Column="1" 		
+				 x:Name="CommentTextBox"
+				 materialDesign:HintAssist.Hint="Comment"
+				    />
+
+            </Grid>
+
+        </materialDesign:Card>
+        
+
+        <ListView Name="lstCabinet" Grid.Row="2"  HorizontalAlignment="Stretch" ItemsSource="{Binding CabinetList}" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Raison Sociale" DisplayMemberBinding="{Binding RaisonSociale}"/>
                     <GridViewColumn Header="Praticiens"  />
                     <GridViewColumn Header="Adresse" />
                 </GridView>
-            </ListView.View>          
+            </ListView.View>
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="SelectionChanged">
                     <i:InvokeCommandAction Command="{Binding SelectedItemChangedCommand}"  
@@ -32,7 +55,7 @@
             </i:Interaction.Triggers>
         </ListView>
 
-        <Button Grid.Column="2" Grid.Row="2" Command="{Binding Path=AddCabinet}" CommandParameter="{Binding }" />
+        <Button  Grid.Row="2" Command="{Binding Path=AddCabinet}" CommandParameter="{Binding }" />
 
 
     </Grid>
