--- a/GestionClient/GestionClient/View/Cabinet/DetailCabinet.xaml
+++ b/GestionClient/GestionClient/View/Cabinet/DetailCabinet.xaml
@@ -16,15 +16,29 @@
             <ColumnDefinition Width="1*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Label x:Name="lblRaisonSociale" Grid.Row="0" Grid.Column="1" Content="{Binding Cabinet.RaisonSociale}"
-               ContentStringFormat="Détail du cabinet {0}"/>
+        <!--<Label x:Name="lblRaisonSociale" Grid.Row="0" Grid.Column="1" Content="{Binding Cabinet.RaisonSociale}"
+               ContentStringFormat="Détail du cabinet {0}"/>-->
 
+        <Grid Grid.Column="1" Grid.Row="0" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="4*" />
+                <RowDefinition Height="1*" />
+            </Grid.RowDefinitions>
+            <ItemsControl ItemsSource="{Binding Cabinet.PraticienList}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Label Content="{Binding Nom}" />
+                        
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
 
-        <Button x:Name="btnAddPraticien" Content="Ajouter" HorizontalAlignment="Left" Margin="10,70,0,0" 
-                VerticalAlignment="Top" Width="80" Grid.Column="1" Command="{Binding Path=AddPraticien}" />
+            <Button x:Name="btnAddPraticien" Content="Ajouter" HorizontalAlignment="Center"  
+                VerticalAlignment="Bottom" Width="80" Grid.Row="1" Command="{Binding Path=AddPraticien}" />
 
+        </Grid>
 
-        <Grid Grid.Column="2" Grid.Row="0">
+        <Grid Grid.Column="2" Grid.Row="0" >
             <Grid.RowDefinitions>
                 <RowDefinition Height="4*" />
                 <RowDefinition Height="1*" />
@@ -40,6 +54,11 @@
             <Button x:Name="btnAddAssistant" Content="Ajouter" HorizontalAlignment="Center"
                     VerticalAlignment="Top" Width="80" Grid.Row="1" Command="{Binding Path=AddAssistant}" />
 
+
+
         </Grid>
+
+        <Button x:Name="btnBack" Content="Retour" HorizontalAlignment="Center"
+                    VerticalAlignment="Bottom" Width="80" Grid.Column="2" Grid.Row="1" Command="{Binding Path=Back}" />
     </Grid>
 </UserControl>
