--- a/GestionClient/GestionClient/View/Acceuil.xaml
+++ b/GestionClient/GestionClient/View/Acceuil.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:GestionClient"        
         xmlns:i="http://schemas.microsoft.com/expression/2010/interactivity"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:gl="clr-namespace:System.Globalization;assembly=mscorlib"
         mc:Ignorable="d">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -31,7 +32,8 @@
                     <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="0,0,0,10" ><materialDesign:PackIcon Kind="Magnify" />Recherche client</TextBlock>
+                <TextBlock Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="0,0,0,10" >
+                    <materialDesign:PackIcon Kind="Magnify"  Height="30" Width="30"  />Recherche cabinets</TextBlock>
                 <TextBox Grid.Column="0" Grid.Row="1"  x:Name="txtRaisonSociale" Margin="10,0,0,10" materialDesign:HintAssist.Hint="Raison sociale" 
                          Text="{Binding SearchedRaisonSociale, Mode=TwoWay}" />
                 <TextBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"  x:Name="txtVille" Margin="10,0,0,10" materialDesign:HintAssist.Hint="Ville"
@@ -42,18 +44,20 @@
                 <Button Margin="0 12 8 4"  ToolTip="Rechercher"
                         Grid.Row="3" Grid.Column="2" Command="{Binding Path=SearchCabinet}">
                     <TextBlock>
-                        <materialDesign:PackIcon Kind="Magnify" />
+                        <materialDesign:PackIcon Kind="Magnify"/>
                         Rechercher
                     </TextBlock>
                 </Button>
             </Grid>
         </materialDesign:Card>
 
-        <!--Content="{materialDesign:PackIcon AccountPlus}"-->
+
+
+        <TextBlock Grid.Row="1" HorizontalAlignment="Left" Style="{StaticResource MaterialDesignHeadlineTextBlock}" Margin="26,20,0,6" >Cabinets</TextBlock>
         <Button  Grid.Row="1" Command="{Binding Path=AddCabinet}" CommandParameter="{Binding }" HorizontalAlignment="Right"
-                  Margin="0,6,26,10"  ToolTip="Ajouter un cabinet">
+                  Margin="0,20,26,10"  ToolTip="Ajouter un cabinet">
             <TextBlock>
-                <materialDesign:PackIcon Kind="AccountPlus" />
+                <materialDesign:PackIcon Kind="Plus" />
                 Ajouter un cabinet</TextBlock>
         </Button>
 
@@ -61,19 +65,32 @@
                   Margin="26,5" >
             <ListView.View>
                 <GridView>
-                    <GridViewColumn Header="Raison Sociale"  DisplayMemberBinding="{Binding RaisonSociale}"/>
-                    <GridViewColumn Header="Praticiens"    />
-                    <GridViewColumn Header="Adresse" >
+                    <GridViewColumn Header="Raison Sociale" Width="200"   DisplayMemberBinding="{Binding RaisonSociale}"/>
+                    <GridViewColumn Header="Praticiens" Width="400" >
+                        <GridViewColumn.CellTemplate>
+                            <DataTemplate>
+                                <ItemsControl ItemsSource="{Binding PraticienList}">
+                                    <ItemsControl.ItemTemplate>
+                                        <DataTemplate>
+                                            <TextBlock Text="{Binding FormatedPraticienName}"/>
+                                        </DataTemplate>
+                                    </ItemsControl.ItemTemplate>
+                                </ItemsControl>
+                            </DataTemplate>
+                        </GridViewColumn.CellTemplate>
+                    </GridViewColumn>
+                    <GridViewColumn Header="Adresse" Width="Auto" >
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
                                 <StackPanel>
                                     <TextBlock Text="{Binding Adresse}"/>
-                                    <TextBlock Text="{Binding Ville}"/>
-                                    <TextBlock Text="{Binding CodePostal}"/>
+                                    <TextBlock Text="{Binding FormatedVille}"/>
                                 </StackPanel>
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
+                    <GridViewColumn Header="Date de dernière intervention"
+                                    DisplayMemberBinding="{Binding DateDerniereIntervention, StringFormat=f, ConverterCulture={x:Static gl:CultureInfo.CurrentCulture}}" Width="Auto" />
                 </GridView>
             </ListView.View>
             <i:Interaction.Triggers>
