--- a/GestionClient/GestionClient/View/Collaborateur/AddAssistant.xaml
+++ b/GestionClient/GestionClient/View/Collaborateur/AddAssistant.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="GestionClient.DetailAssistant"
+﻿<UserControl x:Class="GestionClient.AddAssistant"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -94,20 +94,10 @@
             <Label x:Name="lblTelephone" Grid.Row="9" Content="Telephone" HorizontalAlignment="Right" Margin="0,0,10,0" 
                    VerticalAlignment="Center" />
             <TextBox x:Name="txtTelephone" Grid.Row="9" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Telephone, Mode=TwoWay}" />
-
-            <!--row 10 -->
-            <!--<Label x:Name="lblEmail" Grid.Row="10" Content="Email" HorizontalAlignment="Right" Margin="0,0,10,0" 
-                   VerticalAlignment="Center" />
-            <TextBox x:Name="txtEmail" Grid.Row="10" Grid.Column="1" HorizontalAlignment="Left" Margin="10,0,0,0" 
-                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Email, Mode=TwoWay}" />
-
-            --><!--row 11--><!--
-            <Label x:Name="lblCommentaire" Grid.Row="11" Content="Commentaire" HorizontalAlignment="Right" Margin="10,0,0,0" 
-                   VerticalAlignment="Center" />
-            <TextBox x:Name="txtCommentaire" Grid.Row="11" Grid.Column="2" AcceptsReturn="True" HorizontalAlignment="Left" Height="50" 
-                     Margin="10,0,0,0" TextWrapping="Wrap" VerticalAlignment="Stretch" Width="180" 
-                     Text="{Binding Assistant.Commentaire, Mode=TwoWay}" />-->
+                 TextWrapping="Wrap" Width="180" VerticalAlignment="Center" Text="{Binding Assistant.Telephone, Mode=TwoWay}" />  
+            
+            
+            
 
             <Grid Grid.Row="12" Grid.Column="1">
                 <Grid.ColumnDefinitions>
